Some coorections and new book

--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -152,6 +152,15 @@ year = "Stand 31.05.2015"
   publisher={Springer Berlin Heidelberg}
 }
 
+@book{barkowsky,
+  title={Einf{\"u}hrung in die musikalische Akustik},
+  author={Barkowsky, J.},
+  number={978-3-795-90909-3},
+  series={Taschenb{\"u}cher zur Musikwissenschaft},
+  year={2009},
+  publisher={Florian Noetzel, Heinrichshofen-B{\"u}cher}
+}
+
 
 @Article{hornerPaper,
   author =       "Andrew Horner",
