--- a/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
+++ b/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
@@ -7,9 +7,9 @@ Trotzdem gibt es einige Methoden den generierten Klang natürlicher wirken zu la
 \FloatBarrier
 \subsubsection{Methoden zur Generierung eines Instrumententones mittels FM-Synthese}
 
-Bei der Synthese eines Tones mittels FM-Synthese müssen zunächst die Parameter der Formel der FM-Synthese festgelegt werden. Hierzu kann das Frequenzspektrum und das Spektrogram des nachzubildenden Tones verwendet werden. Eine ausführliche Erklärung der einzelnen Parameter ist zu finden in Kapitel \ref{einfacheFM} - \nameref{einfacheFM}. 
+Bei der Synthese eines Tones mittels FM-Synthese müssen zunächst die Parameter der Formel der FM-Synthese festgelegt werden. Hierzu kann das Frequenzspektrum und das Spektrogramm des nachzubildenden Tones verwendet werden. Eine ausführliche Erklärung der einzelnen Parameter ist zu finden in Kapitel \ref{einfacheFM} - \nameref{einfacheFM}. 
 
-Mit dem Offensichtlichstem kann gestartet werden, der Grundfrequenz. Sie ist im Normalfall die Frequenz mit dem größten Ausschlag im Spektrum. Sie kann als Trägerfrequenz $f_c$ verwendet werden. Der Abstand der Grundfrequenz zur ersten Seitenfrequenz und der Abstand der Seitenfrequenzen zueinander ist der zweite Anhaltspunkt. Dieser Abstand findet als Modulationsfrequenz $f_m$ Verwendung. Für harmonische Töne ist ein ganzzahliges Vielfaches der Grundfrequenz als Modulationsfrequenz nötig \cite[S. 528]{chowningPaper}. Der Modulationsindex $I$ kann mithilfe der Bessel Funktionen gefunden werden - siehe hierzu \ref{bulli:besselModIndexZusammenahang} - \nameref{bulli:besselModIndexZusammenahang}. Alternativ kann eine grobe Schätzung vorgenommen werden, hierzu ist die Faustformel Modulationsindex + 2 = Anzahl der sichtbaren Seitenfrequenzen nützlich. Sollte mittels der normalen FM-Synthese kein zufriedenstellendes Ergebnis erzielt werden können, sollte mit der komplexen FM-Synthese experimentiert werden. 
+Mit dem Offensichtlichstem kann gestartet werden, der Grundfrequenz. Sie ist die niedrigste ausgeprägte Frequenz des Spektrums und legt die Tonhöhe fest \cite[S. 53]{barkowsky}. Sie kann als Trägerfrequenz $f_c$ verwendet werden. Der Abstand der einzelnen Frequenzen zueinander ist der zweite Anhaltspunkt. Dieser Abstand findet als Modulationsfrequenz $f_m$ Verwendung. Für harmonische Töne ist ein ganzzahliges Vielfaches der Grundfrequenz als Modulationsfrequenz nötig \cite[S. 528]{chowningPaper}. Der Modulationsindex $I$ kann mithilfe der Bessel Funktionen gefunden werden - siehe hierzu \ref{bulli:besselModIndexZusammenahang} - \nameref{bulli:besselModIndexZusammenahang}. Alternativ kann eine grobe Schätzung vorgenommen werden, hierzu ist die Faustformel Modulationsindex + 2 = Anzahl der sichtbaren Seitenfrequenzen nützlich. Sollte mittels der normalen FM-Synthese kein zufriedenstellendes Ergebnis erzielt werden können, sollte mit der komplexen FM-Synthese experimentiert werden. 
 
 Bei der komplexen FM-Synthese finden mehrere Träger oder mehrere Modulatoren Verwendung. Diese können in Reihe oder parallel geschaltet werden. Außerdem kann auch die so genannte Feedback Frequenz Modulation genutzt werden, welche das voran gegangene Signal moduliert \cite[S. 399 f.]{hornerPaper}. Feedback-FM-Synthese kann außerdem eingesetzt werden um Rauschen zu erzeugen. Sie kann aber auch ein sehr komplexes Spektrum mit vielen Seitenfrequenzen erzeugen. Komplexe FM-Synthese findet Einsatz wenn mit der normalen FM-Synthese nicht ausreichend komplexe Spektren erzeugt werden können. Dies kann zum Beispiel der Fall sein wenn mehrere stetig fallende Seitenfrequenzen erzeugt werden sollen. Wenn bei einfacher FM-Synthese der Modulationsindex erhöht wird um mehr Seitenfrequenzen zu erzeugen, verändert sich die Stärke der Grundfrequenz, definiert durch die Bessel Funktionen - nachzulesen im Kapitel \ref{bulli:besselModIndexZusammenahang} - \nameref{bulli:besselModIndexZusammenahang}. Um dies zu vermeiden können die Modulatoren verschachtelt werden - nachzulesen im Kapitel \ref{cascade} - \nameref{cascade}
 
@@ -45,12 +45,12 @@ Um den Klang des synthetisierten Tones noch natürlicher zu gestalten, könnte d
 \FloatBarrier
 \subsubsection{Nachbildung eines Tones einer Querflöte mittels FM-Synthese}
 
-Im Laufe dieses Kapitels soll ein Ton einer Querflöte mittels FM-Synthese erzeugt und mit den oben beschriebenen Techniken verfeinert werden. Alle Beispiele sind in Matlab erstellt und können mit den beiliegenden Source-Code nachgestellt werden. In Abbildung \ref{fig:plotFluteOrig} sind Spektrogram, Waveform und Spektrum des originalen Querflöten Tones abgebildet. Mit den Informationen aus den vorliegenden Grafiken wird versucht, diesen spezifischen Ton nachzubilden.
+Im Laufe dieses Kapitels soll ein Ton einer Querflöte mittels FM-Synthese erzeugt und mit den oben beschriebenen Techniken verfeinert werden. Alle Beispiele sind in Matlab erstellt und können mit den beiliegenden Source-Code nachgestellt werden. In Abbildung \ref{fig:plotFluteOrig} sind Spektrogramm, Waveform und Spektrum des originalen Querflöten Tones abgebildet. Mit den Informationen aus den vorliegenden Grafiken wird versucht, diesen spezifischen Ton nachzubilden.
 
 \begin{figure} [h!t!b!]
 \centering
   \includegraphics[width=1\textwidth]{plotFluteOrig.png}
-\caption{Plot des Spektrograms, der Waveform und des Spektrums eines echten Tones einer Querflöte}
+\caption{Plot des Spektrogramms, der Waveform und des Spektrums eines echten Tones einer Querflöte}
 \label{fig:plotFluteOrig}
 Quelle: Eigene Darstellung mit Matlab
 \end{figure}
@@ -60,12 +60,12 @@ Anhand des Spektrums können bereits einige Erkenntnisse für die FM-Synthese au
 \begin{figure} [ht]
 \centering
   \includegraphics[width=1\textwidth]{plotFMSyntheseI05.png}
-\caption{Plot des Spektrograms und des Spektrums der FM-Synthese mit den Parametern $f_c = 796.75 Hz$, $f_m = f_c$ und $I = 0.5$ }
+\caption{Plot des Spektrogramms und des Spektrums der FM-Synthese mit den Parametern $f_c = 796.75$ Hz, $f_m = f_c$ und $I = 0.5$ }
 \label{fig:plotFMSyntheseI05}
 Quelle: Eigene Darstellung mit Matlab
 \end{figure}
 
-Ein erstes Spektrum der FM-Synthese mit den eben festgelegten Werten kann in Abbildung \ref{fig:plotFMSyntheseI05} begutachtet werden. Beim Evaluieren der Ergebnisse dieses Spektrums fällt auf, dass die erste Seitenfrequenz im Verhältnis zur Grundfrequenz einen viel stärkeren Ausschlag aufweist als es bei der Querflöte der Fall ist. Außerdem fällt danach die Amplitude der 2. und 3. Seitenfrequenz viel stärker ab als bei dem Instrument. Sieht man sich jetzt noch das Spektrogram (ebenfalls in Abbildung \ref{fig:plotFMSyntheseI05}) an, fällt im Vergleich zum Spektrogram der Querflöte die sehr viel geringer Anzahl an Seitenfrequenzen auf. Die Seitenfrequenzen bei 4000 Hz und darüber sind bei dem Instrument noch deutlich sichtbar während sie bei der FM-Synthese schon bei 4000 Hz kaum noch existent sind. Versucht man jetzt den Modulationsindex zu erhöhen um die Anzahl der Seitenfrequenzen zu erhöhen, verlagert sich die Amplitude unserer Trägerfrequenz auf die Seitenfrequenzen, damit werden die Seitenfrequenz stärker und die Träger Frequenz schwächer, zu sehen in Abbildung \ref{fig:spektrumFMSyntheseI2}. 
+Ein erstes Spektrum der FM-Synthese mit den eben festgelegten Werten kann in Abbildung \ref{fig:plotFMSyntheseI05} begutachtet werden. Beim Evaluieren der Ergebnisse dieses Spektrums fällt auf, dass die erste Seitenfrequenz im Verhältnis zur Grundfrequenz einen viel stärkeren Ausschlag aufweist als es bei der Querflöte der Fall ist. Außerdem fällt danach die Amplitude der 2. und 3. Seitenfrequenz viel stärker ab als bei dem Instrument. Sieht man sich jetzt noch das Spektrogramm (ebenfalls in Abbildung \ref{fig:plotFMSyntheseI05}) an, fällt im Vergleich zum Spektrogramm der Querflöte die sehr viel geringer Anzahl an Seitenfrequenzen auf. Die Seitenfrequenzen bei 4000 Hz und darüber sind bei dem Instrument noch deutlich sichtbar während sie bei der FM-Synthese schon bei 4000 Hz kaum noch existent sind. Versucht man jetzt den Modulationsindex zu erhöhen um die Anzahl der Seitenfrequenzen zu erhöhen, verlagert sich die Amplitude unserer Trägerfrequenz auf die Seitenfrequenzen, damit werden die Seitenfrequenz stärker und die Träger Frequenz schwächer, zu sehen in Abbildung \ref{fig:spektrumFMSyntheseI2}. 
 
 \begin{figure} [ht]
 \centering
@@ -75,12 +75,12 @@ Ein erstes Spektrum der FM-Synthese mit den eben festgelegten Werten kann in Abb
 Quelle: Eigene Darstellung mit Matlab
 \end{figure}
 
-Um dieses Verhalten zu umgehen müssen wir uns der komplexen FM-Synthese widmen. Hier werden mehrere Modulatoren verschachtelt um eine größere Anzahl an Seitenfrequenzen zu erzeugen. Allerdings ist es bei der komplexen FM-Synthese nochmal schwerer im Vergleich zur einfachen FM-Synthese, wie stark die Amplituden der einzelnen Seitenfrequenzen ausgeprägt sind, deshalb braucht es hier einige Experimente um auf das gewünschte Ergebnis zu erzeugen. In Abbildung \ref{fig:plotFMSyntheseKomplex4Mod} kann das Ergebnis der FM-Synthese mit 4 Modulatoren betrachtet werden. Dieses Spektrum ähnelt dem der Querflöte schon sehr viel stärker und auch das Spektrogram weißt in den Intensitäten der Seitenfrequenzen eine deutliche Ähnlichkeit auf.
+Um dieses Verhalten zu umgehen müssen wir uns der komplexen FM-Synthese widmen. Hier werden mehrere Modulatoren verschachtelt um eine größere Anzahl an Seitenfrequenzen zu erzeugen. Allerdings ist es bei der komplexen FM-Synthese nochmal schwerer im Vergleich zur einfachen FM-Synthese, wie stark die Amplituden der einzelnen Seitenfrequenzen ausgeprägt sind, deshalb braucht es hier einige Experimente um auf das gewünschte Ergebnis zu erzeugen. In Abbildung \ref{fig:plotFMSyntheseKomplex4Mod} kann das Ergebnis der FM-Synthese mit 4 Modulatoren betrachtet werden. Dieses Spektrum ähnelt dem der Querflöte schon sehr viel stärker und auch das Spektrogramm weißt in den Intensitäten der Seitenfrequenzen eine deutliche Ähnlichkeit auf.
 
 \begin{figure} [ht]
 \centering
   \includegraphics[width=1\textwidth]{plotFMSyntheseKomplex4Mod.png}
-\caption{Plot des Spektrograms und des Spektrums der FM-Synthese mit 4 Modulatoren und den Parametern $f_c = 796.75 Hz$, $f_m1 = f_m2 = f_m3 = f_m4 = f_c$, $I_1 = 0.3$, $I_2 = 0.5$, $I_3 = 1$ und $I_4 = 1$}
+\caption{Plot des Spektrogramms und des Spektrums der FM-Synthese mit 4 Modulatoren und den Parametern $f_c = 796.75 Hz$, $f_{m1} = f_{m2} = f_{m3} = f_{m4} = f_c$, $I_1 = 0.3$, $I_2 = 0.5$, $I_3 = 1$ und $I_4 = 1$}
 \label{fig:plotFMSyntheseKomplex4Mod}
 Quelle: Eigene Darstellung mit Matlab
 \end{figure}
@@ -90,7 +90,7 @@ Da die Grundeinstellung der FM-Synthese mit den oben genannten Parametern ein zu
 \begin{figure} [ht]
 \centering
   \includegraphics[width=0.5\textwidth]{spektrumFMSyntheseVibrato.png}
-\caption{Plot des Spektrums der FM-Synthese mit 4 Modulatoren, Vibrato und den Parameter $f_c = 796.75 Hz$, $f_m1 = f_m2 = f_m3 = f_m4 = f_c + 2.5$, $I_1 = 0.3$, $I_2 = 0.5$, $I_3 = 1$ und $I_4 = 1$}
+\caption{Plot des Spektrums der FM-Synthese mit 4 Modulatoren, Vibrato und den Parameter $f_c = 796.75 Hz$, $f_{m1} = f_{m2} = f_{m3} = f_{m4} = f_c + 2.5$, $I_1 = 0.3$, $I_2 = 0.5$, $I_3 = 1$ und $I_4 = 1$}
 \label{fig:spektrumFMSyntheseVibrato}
 Quelle: Eigene Darstellung mit Matlab
 \end{figure}
@@ -105,9 +105,9 @@ Der nächste wichtige und einfach hinzuzufügende Bestandteil des synthetisierte
 Quelle: Eigene Darstellung mit Matlab
 \end{figure}
 
-Nach Hinzufügen der ADSR-Hüllkurve, fällt im Spektrogram auf, dass die Seitenfrequenzen trotz geringerer Amplitude bei Attack und Release Phase einen größeren Ausschlag als beim Instrument aufweist. Dieser Ausschlag kann verringert werden, indem der erste Modulationsindex mit der ADSR-Hüllkurve variiert wird. 
+Nach Hinzufügen der ADSR-Hüllkurve, fällt im Spektrogramm auf, dass die Seitenfrequenzen trotz geringerer Amplitude bei Attack und Release Phase einen größeren Ausschlag als beim Instrument aufweist. Dieser Ausschlag kann verringert werden, indem der erste Modulationsindex mit der ADSR-Hüllkurve variiert wird. 
 
-Nachdem Vibrato, Variabler Modulationsindex und ADSR-Hüllkurve hinzugefügt wurden, hat sich das Spektrogram zur Abbildung \ref{fig:plotFMSyntheseKomplex4Mod} kaum geändert. Es wird nur der Vibrato durch die etwas breiteren Seitenfrequenzen und die ADSR-Hüllkurve durch Ansteigen des Spektrums zu Beginn des Tones und Abfallen des Spektrums nach 1.2 Sekunden sichtbar. Der Ton hört sich von der Tonhöhe und der Intensität schon stark nach dem originalen Querflötenton an. Allerdings fehlen noch die typischen Blas- und Luft Verwirbelungsgeräusche sowie das sehr dominante Anblasgeräusch. Um die typischen Blasgeräusche zu erzeugen wird zunächst ein Rauschen mittels Feedback-FM-Synthese mit hohem Modulationsindex erzeugt. Würde das Rauschen ohne weitere Arbeitsschritte dem synthetisierten Signal hinzugefügt, könnte das Rauschen stark herausgehört werden. Um dies zu verhindern muss das Rauschen vorerst gefiltert werden. Hierzu wird ein Multibandpassfilter über alle möglichen Seitenfrequenzen erstellt. Das gefilterte Rauschen wird anschließend noch mit einer ADSR-Hüllkurve veredelt. Dieser Schritt ist nötig, da während der Attack Phase des original Tones, wie im Spektrogram in Abbildung \ref{fig:plotFluteOrig} zu sehen, das Rauschen durch das Anblasen des Instrumentes sehr scharf heraus sticht. Zusätzlich kann noch ein sehr leises Rauschen der Feedback-FM-Synthese ohne Filter über das ganze Frequenzspektrum gelegt werden um auch in den höheren Frequenzen einen leichten Ausschlag im Spektrogram kenntlich zu machen. Trotz des verstärkten Rauschens zu Beginn des Tones, fehlt noch der das stark hörbare Anblasgeräusch. Beim Betrachten des Spektrums und des Spektrograms fallen noch zwei recht starke Ausschläge zu Beginn des Signals auf. Ein Ausschlag befindet sich bei 904.3 Hz und der Zweite bei 1182 Hz. Beide Frequenzen können mit einem einfachen Sinus erzeugt und mit einer ADSR-Hüllkurve, die nur eine kurze Attack Phase aufweist und danach komplett abfällt, modelliert und zum Signal addiert werden. In Abbildung \ref{fig:spektrogramFMSyntheseComplete} ist das Ergebnis der FM-Synthese mit den, in diesem Kapitel, besprochenen Veredelungen gezeigt. In den Plots sind die Ähnlichkeiten zum originalen Ton deutlich zu sehen.
+Nachdem Vibrato, Variabler Modulationsindex und ADSR-Hüllkurve hinzugefügt wurden, hat sich das Spektrogramm zur Abbildung \ref{fig:plotFMSyntheseKomplex4Mod} kaum geändert. Es wird nur der Vibrato durch die etwas breiteren Seitenfrequenzen und die ADSR-Hüllkurve durch Ansteigen des Spektrums zu Beginn des Tones und Abfallen des Spektrums nach 1.2 Sekunden sichtbar. Der Ton hört sich von der Tonhöhe und der Intensität schon stark nach dem originalen Querflötenton an. Allerdings fehlen noch die typischen Blas- und Luft Verwirbelungsgeräusche sowie das sehr dominante Anblasgeräusch. Um die typischen Blasgeräusche zu erzeugen wird zunächst ein Rauschen mittels Feedback-FM-Synthese mit hohem Modulationsindex erzeugt. Würde das Rauschen ohne weitere Arbeitsschritte dem synthetisierten Signal hinzugefügt, könnte das Rauschen stark herausgehört werden. Um dies zu verhindern muss das Rauschen vorerst gefiltert werden. Hierzu wird ein Multibandpassfilter über alle möglichen Seitenfrequenzen erstellt. Das gefilterte Rauschen wird anschließend noch mit einer ADSR-Hüllkurve veredelt. Dieser Schritt ist nötig, da während der Attack Phase des original Tones, wie im Spektrogramm in Abbildung \ref{fig:plotFluteOrig} zu sehen, das Rauschen durch das Anblasen des Instrumentes sehr scharf heraus sticht. Zusätzlich kann noch ein sehr leises Rauschen der Feedback-FM-Synthese ohne Filter über das ganze Frequenzspektrum gelegt werden um auch in den höheren Frequenzen einen leichten Ausschlag im Spektrogramm kenntlich zu machen. Trotz des verstärkten Rauschens zu Beginn des Tones, fehlt noch der das stark hörbare Anblasgeräusch. Beim Betrachten des Spektrums und des Spektrogramms fallen noch zwei recht starke Ausschläge zu Beginn des Signals auf. Ein Ausschlag befindet sich bei 904.3 Hz und der Zweite bei 1182 Hz. Beide Frequenzen können mit einem einfachen Sinus erzeugt und mit einer ADSR-Hüllkurve, die nur eine kurze Attack Phase aufweist und danach komplett abfällt, modelliert und zum Signal addiert werden. In Abbildung \ref{fig:spektrogramFMSyntheseComplete} ist das Ergebnis der FM-Synthese mit den, in diesem Kapitel, besprochenen Veredelungen gezeigt. In den Plots sind die Ähnlichkeiten zum originalen Ton deutlich zu sehen.
 
 \begin{figure} [h!t!b!]
 \centering
@@ -132,7 +132,7 @@ Zu Beginn dieser Arbeit wurde zum besseren Verständnis der FM-Synthese ein klei
 
 Zunächst wurde eine einfache FM-Synthesizer Klasse geschrieben und diese an das Audio Ausgabesystem des JUCE Frameworks angebunden. Dabei ruft die Soundkarte eine Methode des Programms auf und erwartet, dass der übergebene Puffer mit Audiodaten gefüllt wird. Das Programm füllt den gegebenen Puffer mit Daten die mit der FM-Synthesizer Klasse generiert wurden. Später wurde das Programm dann noch um die visuelle Darstellung des erzeugten Audiosignals erweitert. Außerdem ist es möglich dem FM-Synthesizer einen Hüllkurvengenerator zu übergeben, welcher bei der Erzeugung des Audiosignals den Amplitudenwert für die einzelnen Samples bereitstellt. Die Amplitudenwerte werden ebenfalls visuell dargestellt.
 
-Da gerade die Änderung der Parameter und das jeweils resultierende Klangbild zum Verständnis hilfreich sind, wurden Möglichkeiten in das Programm eingebaut um sowohl den Modulationsindex als auch die Modulationsfrequenz sowie die Oktave zu ändern. Das Ändern der Parameter ist mittels einfachem Tastendruck möglich. Zusätzlich wurde das Programm so angepasst, dass es mittels Tastendruck verschiedene Töne gespielt werden können. Die Tasten ''C'', ''D'', ''E'', ''F'', ''G'', ''A'' und ''B'' entsprechen dabei jeweils ihrem tonalen Äquivalent. Beim Drücken der Taste startet die Hüllkurve in die Attack Phase, geht dann über in die Decay und schließlich in die Sustain Phase. Wird die Taste losgelassen startet die Release Phase und der Ton klingt ab. Mit den Tasten ''1'' und ''2'' kann der Modulationsindex inkrementiert sowie dekrementiert werden. Um die Modulationsfrequenz zu ändern können die Pfeil hoch und Pfeil runter Tasten genutzt werden. Die Octave lässt sich mit den Tasten ''+'' und ''-'' verändern.
+Da gerade die Änderung der Parameter und das jeweils resultierende Klangbild zum Verständnis hilfreich sind, wurden Möglichkeiten in das Programm eingebaut um sowohl den Modulationsindex als auch die Modulationsfrequenz sowie die Oktave zu ändern. Das Ändern der Parameter ist mittels einfachem Tastendruck möglich. Zusätzlich wurde das Programm so angepasst, dass es mittels Tastendruck verschiedene Töne gespielt werden können. Die Tasten "'C"', "'D"', "'E"', "'F"', "'G"', "'A"' und "'B"' entsprechen dabei jeweils ihrem tonalen Äquivalent. Beim Drücken der Taste startet die Hüllkurve in die Attack Phase, geht dann über in die Decay und schließlich in die Sustain Phase. Wird die Taste losgelassen startet die Release Phase und der Ton klingt ab. Mit den Tasten "'1"' und "'2"' kann der Modulationsindex inkrementiert sowie dekrementiert werden. Um die Modulationsfrequenz zu ändern können die Pfeil hoch und Pfeil runter Tasten genutzt werden. Die Octave lässt sich mit den Tasten "'+"' und "'-"' verändern.
 
 Das entstandene Programm bietet eine gute Möglichkeit die Parameter der FM-Synthese während der Wiedergabe eines Tones zu verändern und hilft so zu verstehen was beim Ändern dieser passiert. Natürlich ist das entstandene Programm nicht so flexibel und mächtig wie beispielsweise das Programm FM8 von Native Instruments. Trotzdem bietet es einen einfachen Einstieg in die FM-Synthese, somit wurde das Ziel der Programmierung des Tools erreicht.
 \FloatBarrier
