Even more presentation stuff, and dx7 text

--- a/Dok/Kapitel/Einfuehrung.tex
+++ b/Dok/Kapitel/Einfuehrung.tex
@@ -22,7 +22,7 @@ Quelle: Eigene Darstellung mit MATLAB
 \end{figure}
 \FloatBarrier
 
-Technisch gesehen kann die FM-Synthese mit Oszillatoren umgesetzt werden. In der einfachsten Form, der einfachen FM-Synthese, benötigt man dazu einen Träger-Oszillator und einen Modulator-Oszillator. Wie eine einfache FM-Synthese in Form einer Schaltung aussehen kann, zeigt Abbildung \textbf{Abbildung \ref{fig:schaltung}}. Der Ausgang des ersten Oszillators geht dabei in den Eingang des Zweiten. Bei VCA handelt es sich um einen spannungsgesteuerten Verstärker (Voltage controlled amplifiert), EG ist ein Hüllkurvengenerator (Envelope Generator). $f_M$ und $f_C$ sind die Frequenzen der beiden Oszillatoren. Über den Modulationsindex $\beta$ kann die Sträke der Modulation festgelegt werden. 
+Technisch gesehen kann die FM-Synthese mit Oszillatoren umgesetzt werden. In der einfachsten Form, der einfachen FM-Synthese, benötigt man dazu einen Träger-Oszillator und einen Modulator-Oszillator. Wie eine einfache FM-Synthese in Form einer Schaltung aussehen kann, zeigt Abbildung \textbf{Abbildung \ref{fig:schaltung}}. Der Ausgang des ersten Oszillators geht dabei in den Eingang des Zweiten. Dabei kann entweder direkt die Frequenz des Trägers beeinflusst werden, jedoch auch dessen Phase. Eine Erläuterung dazu folgt in Kapitel \cite{Bulli-Teil}. Bei VCA handelt es sich um einen spannungsgesteuerten Verstärker (Voltage controlled amplifiert), EG ist ein Hüllkurvengenerator (Envelope Generator). $f_M$ und $f_C$ sind die Frequenzen der beiden Oszillatoren. Über den Modulationsindex $\beta$ kann die Sträke der Modulation festgelegt werden. 
 
 \begin{figure} [ht]
 \centering
@@ -116,10 +116,10 @@ Eine Fotografie der Gründer von CCRMA ist auf \textbf{Abbildung \ref{fig:founde
   \includegraphics[width=0.8\textwidth]{Founders_CCRMA.png}
 \caption{Gründer von CCRMA. Stehend von Links nach rechts: Leland Smith, John Grea, John Chowning und Loren Rush. Sitzend: Andy Moorer.}
 \label{fig:foundersCCRMA}
-Quelle: \cite[S. 52]{soundofinnovation} - Abbildung 4.1
+Quelle: \cite[S. 52]{soundofinnovation} - Figure 4.1
 \end{figure}
 
-Nachdem Yamaha die Technik der FM-Synthese lizenziert hatte, brachte die Firma nach einem Prototypen im Jahre 1980 den ersten digitalen FM-Synthesizer GS1 und zwei Jahre später mit dem GS2 eine kleinere und handlichere Version des GS1 heraus. Die Geräte kosteten um die 30.000 DM für den GS1 bzw. 16.000 DM für den GS2 und waren deshalb nur für ausgewählte Musiker gedacht. Der Durchbruch gelang im Jahre 1983 mit dem DX7. Dieser konnte parallel 16 Stimmen verarbeiten und kostete ca. 4.700 DM. Preislich ähnliche und damals übliche analoge subtraktive Synthesizer konnten lediglich 4 Stimmen verarbeiten \cite{fmGS1}. Ein Bild des DX7 ist in \textbf{Abbildung \ref{fig:dx7}} zu sehen.
+Nachdem Yamaha die Technik der FM-Synthese lizenziert hatte, brachte die Firma nach einem Prototypen im Jahre 1980 den ersten digitalen FM-Synthesizer GS1 und zwei Jahre später mit dem GS2 eine kleinere und handlichere Version des GS1 heraus. Die Geräte kosteten um die 30.000 DM für den GS1 bzw. 16.000 DM für den GS2 und waren deshalb nur für ausgewählte Musiker gedacht. Der Durchbruch gelang im Jahre 1983 mit dem DX7. Dieser konnte parallel 16 Stimmen verarbeiten, welche durch 6 sogenannte Operatoren erzeugt wurden. Diese Operatoren waren in 32 vordefinierten Algorithmen unterschiedlich in Reihe, parallel oder mit Feedback zusammengeschaltet \cite[S. 11]{dx7manual}. Der DX7 kostete ca. 4.700 DM, preislich ähnliche und damals übliche analoge subtraktive Synthesizer konnten lediglich 4 Stimmen verarbeiten \cite{fmGS1}. Ein Bild des DX7 ist in \textbf{Abbildung \ref{fig:dx7}} zu sehen.
 
  \begin{figure} [ht]
 \centering
