--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -14,6 +14,12 @@
   year = "Stand 31.05.2015"
   }
 
+@MISC{dx7manual,
+  author = "Yamaha",
+  title = "DX7 Operating Manual",
+  year = "1983",
+  }
+
 @Book{soundofinnovation,
 author = "Andrew J. Nelson",
 title =" The sound of innovation - Stanford and the computer music revolution",
