--- a/Dok/seminar.tex
+++ b/Dok/seminar.tex
@@ -8,7 +8,7 @@
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{bibgerm}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref} %add [hidelinks] to hide link boxes
 \usepackage{gensymb}
 \usepackage[section]{placeins}
 \usepackage[export]{adjustbox}
